added Bible Status info

--- a/index.html
+++ b/index.html
@@ -50,6 +50,16 @@
         Each people group in each country is given a category on the scale from 1 - unreached
         to 5 - significantly reached.
     </p>
+    <p>
+        The Bible Status number is a scale from 0-5 and indicates the completeness of a Bible 
+        translation in a people group's language. The scale is: 
+        <li>0 - Unspecified</li>
+        <li>1 - Translation needed</li>
+        <li>2 - Translation started</li>
+        <li>3 - Portions</li>
+        <li>4 - New Testament</li>
+        <li>5 - Complete Bible</li>
+    </p>
 </body>
 
 </html>
